# Ved.io

./: .gitignore  Dockerfile.python  docker-compose.python.yml
.github/workflows/: test.yml
backend-py/: .env.example  Makefile  README.md  hf_models_out.txt  main.py  pyproject.toml  requirements.txt  test_hf_image.py  test_hf_models.py
backend-py/alembic/: env.py
backend-py/api/: deps.py
backend-py/api/routers/: ai_configs.py  dramas.py  images.py  misc.py  orchestrai.py  setup.py  videos.py
backend-py/core/: aws_clients.py  config.py  database.py  logger.py  storage.py
backend-py/core/ai_clients/: __init__.py  base.py  gemini_client.py  huggingface_client.py  openai_client.py
backend-py/models/: __init__.py  ai_config.py  asset.py  drama.py  image_generation.py  task.py  video_generation.py  video_merge.py
backend-py/orchestrator/: __init__.py  full_pipeline.py  job_manager.py  pipeline.py
backend-py/schemas/: drama.py  generation.py
backend-py/services/: ai_service.py  critic.py  drama_service.py  image_service.py  script_service.py  task_service.py  video_merge_service.py
backend-py/services/agents/: __init__.py  asset_orchestrator.py  draft_assembler.py  replanner.py  safety_agent.py  scene_planner.py  script_engineer.py
backend-py/templates/: index.html  setup.html  status.html
backend-py/tests/: conftest.py
backend-py/tests/integration/: test_smoke_pipeline.py
backend-py/tests/unit/: test_critic.py  test_script_service.py
